--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
+    "sass": "^1.80.3",
     "web-vitals": "^3.3.2"
   },
   "scripts": {
@@ -37,5 +38,6 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-private-property-in-object": "^7.25.7"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
